syntax = "proto3";

package PRO;

//option optimize_for = LITE_RUNTIME;
option go_package = "gamelib/protobuf/gpro";
option csharp_namespace = "com.cms.client.network.gpro";
option java_multiple_files = true;
option java_package = "com.cms.client.network.gpro";

//用户定义的协议
enum USER_PROTYPE {
  UNIVERSAL_1000 = 0;
  USER_MSG_BEGIN = 1000;
  
  //用户协议 client to server
  USER_LOGIN_REQ = 1001;
  USER_RELOGIN_REQ = 1002;
  USER_LOGOUT_NTF = 1003;
  USER_ACTIVE_NTF = 1004;
  
  USER_ROLELIST_REQ = 1005;
  USER_ROLESELECT_REQ = 1006;
  USER_ROLECREATE_REQ = 1007;
  
  USER_MSG_END = 1100;

  //server to client
  USER_LOGIN_ACK = 1101;
  USER_RELOGIN_ACK = 1102;
  USER_GATELOST_NTF = 1103;
  USER_ROLELIST_ACK = 1104;
  USER_ROLESELECT_ACK = 1105;
  USER_ROLECREATE_ACK = 1106;
  
  USER_ROLEDETAILA_NTF = 1107;
  USER_ROLEDETAILB_NTF = 1108;
  USER_ROLEDETAILEND_NTF = 1109;
  USER_MYSIMPLEINFO_REQ = 1110;  
  USER_MYSIMPLEINFO_ACK = 1111;
  
  USER_SAVEROLELOC_NTF = 1112;
  
  USER_MSGALL_END = 1290;
}

enum BUILD_PROTYPE {
  UNIVERSAL_1250 = 0;

  BUILD_ADDITEM_REQ = 1251;
  BUILD_ADDITEM_ACK = 1252;
  BUILD_DELITEM_REQ = 1253;
  BUILD_DELITEM_ACK = 1254;
}

enum PET_PROTYPE {
  UNIVERSAL_1500 = 0;
  
  PET_ADOPTONE_REQ = 1501;
  PET_ADOPTONE_ACK = 1502;
  PET_RELEASEONE_REQ = 1503;
  PET_RELEASEONE_ACK = 1504;
}

enum CHAT_PROTYPE {
  UNIVERSAL_1750 = 0;
  CHAT_MSG_BEGIN = 1750;
  
  //client to server
  CHAT_USERMSG_SAY = 1751;
  CHAT_USERCHANNELS_ACTIVE = 1752;
  CHAT_CUSTOMCHANNELID_REQ = 1753;
  
  CHAT_MSG_END = 1850;

  CHAT_CUSTOMCHANNELID_ACK = 1853;
  CHAT_CHATMSG_NTF = 1854;
  CHAT_GLOBALMSG_NTF = 1855;

  CHAT_MSGALL_END = 1999;
}

enum MAIL_PROTYPE {
  UNIVERSAL_2000 = 0;
  MAIL_MSG_BEGIN = 2000;
  
  MAIL_USERONLINE_ACTIVE = 2001;
  MAIL_NEWMAIL_NTF = 2002;
  MAIL_MAILGET_REQ = 2003;
  MAIL_READMAIL_REQ = 2004;
  MAIL_DELETEMAIL_REQ = 2005;
  MAIL_UNBINDATTACHS_REQ = 2006;
  
  MAIL_SYSTEMMAIL_REQ = 2007;
  MAIL_NEWMAIL_REQ = 2008;

  MAIL_MSG_END = 2100;
  
  MAIL_MAILGET_ACK = 2101;
  MAIL_READMAIL_ACK = 2103;
  MAIL_DELETEMAIL_ACK = 2104;
  MAIL_UNBINDATTACHS_ACK = 2105;
  MAIL_SYSTEMMAIL_ACK = 2106;
  MAIL_SYSTEMMAIL_NTF = 2107;
  MAIL_NEWMAIL_ACK = 2108;  
  
  MAIL_MSGALL_END = 2249;
}

enum FRIEND_PROTYPE {
  UNIVERSAL_2250 = 0;
  FRIEND_MSG_BEGIN = 2250;
  
  FRD_FRIENDLIST_REQ = 2251;
  FRD_FRIENDINVITE_REQ = 2252;
  FRD_INVITECONFIRM_REQ = 2253;
  FRD_FRIENDDELETE_REQ = 2254;
  
  FRIEND_MSG_END = 2350;
  
  FRD_FRIENDLIST_ACK = 2351;
  FRD_FRIENDINVITE_ACK = 2352;
  FRD_INVITECONFIRM_ACK = 2353;
  FRD_FRIENDDELETE_ACK = 2354;
  FRD_FRIENDCHANGEOTHER_NTF = 2355;
  
  FRIEND_MSGALL_END = 2499;
}

enum ITEMS_PROTYPE {
  UNIVERSAL_2500 = 0;
  
  ITEM_USERBINDITEMS_REQ = 2501;
  ITEM_USERBINDITEMS_ACK = 2502;
}

enum TASK_PROTYPE {
  UNIVERSAL_2750 = 0;
  TASK_MSG_BEGIN = 2750;
  
  TASK_WAITLIST_REQ = 2751;
  TASK_MYTASKLIST_REQ = 2752;
  TASK_GETTASK_REQ = 2753;
  TASK_SUBMITTASK_REQ = 2754;
  TASK_GIVEUPTASK_REQ = 2755;
  
  TASK_MSG_END = 2850;

  TASK_WAITLIST_ACK = 2851;
  TASK_MYTASKLIST_ACK = 2852;
  TASK_GETTASK_ACK = 2853;
  TASK_SUBMITTASK_ACK = 2854;
  TASK_OBTAINREWARD_NTF = 2855;
  TASK_GIVEUPTASK_ACK = 2856;

  TASK_MSGALL_END = 2999;
}

enum MMS_PROTYPE {
  UNIVERSAL_3000 = 0;
  MMS_MSG_BEGIN = 3000;
  
  MMS_MATCHMAKING_REQ = 3001;
  
  MMS_MSG_END = 3140;

  MMS_MATCHMAKING_ACK = 3141;

  MMS_MSGALL_END = 3249;
}

//game相关协议定义
enum GMS_PROTYPE {
  UNIVERSAL_4000 = 0;
  GMS_MSG_BEGIN = 4000;
  
  GMS_ENTERGAME_REQ = 4001;
  GMS_USERSTATE_SYN = 4002;
  
  GMS_MSG_END = 4500;

  GMS_USERALIVE_NTF = 4501;
  GMS_SAVEUSERLOC_NTF = 4502;
  GMS_ENTERGAME_ACK = 4503;
  GMS_USERSVISIBLE_NTF = 4504;
  GMS_SERVICEDISABLE_NTF = 4505;
  GMS_USERINFO_SYNC = 4506;

  GMS_MSGALL_END = 4999;
}
